[tool.poetry]
name = "mos6502"
version = "0.9.0"
description = "A MOS6502 emulator written in Python."
authors = ["JamesTheBard <jamesthebard@gmail.com>"]
readme = "README.md"
packages = [{include = "mos6502"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
