[project]
name = "mos6502"
version = "0.9.1"
description = "A MOS6502 emulator written in Python."
authors = [{ name = "JamesTheBard", email = "jamesthebard@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = ["pytest>=7.3.2,<8"]

[tool.hatch.build.targets.sdist]
include = ["mos6502"]

[tool.hatch.build.targets.wheel]
include = ["mos6502"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
